[FIX] website, website_blog: fix dynamic snippets visibility
Steps to reproduce [18.2+]:

1. Add a dynamic snippet to a website page (e.g., Events).

2. Unpublish all event records.

3. The snippet first appears with a visible header, which then
disappears.

[A]- Starting from [1], the `o_dynamic_empty` class was introduced to
handle the dynamic snippets visibility, and an upgrade script (see [3])
set this class by default on them.

Later in 18.0 (after [2]), the class was changed to `s_dynamic_empty` in
the XML template, while on the JS side, the class used to toggle snippet
visibility was `o_dynamic_snippet_empty`. This class was also added to
snippets on destroy (before saving).

[B]- As a result, a dynamic snippet may end up with:

- `o_dynamic_empty` & `o_dynamic_snippet_empty`: for old (before 18.0) but
edited snippets.
- `o_dynamic_empty`: for old snippets never updated in edit mode on 18.0.
- `s_dynamic_empty` & `o_dynamic_snippet_empty`: for new snippets created
in 18.0.

Remark: the `s_dynamic_empty` class was introduced by mistake and does
not have any associated CSS

Since only `o_dynamic_snippet_empty` has `display: none` in CSS, the
interaction flow became inconsistent (starting from 18.2): snippets were
initially visible, then hidden if no content was found... which caused
the flickering behavior described above.

And because of [B], old snippets with the `o_dynamic_empty` class
will be visible by default in 18.0.

This commit restores the intended (and original) behavior:

- A dynamic snippet should be invisible by default,

- Then the interaction decides (based on actual content) whether the
snippet should be displayed.

[1]: https://github.com/odoo/odoo/commit/290188a2949521547f5ee664584301c0263def3e
[2]: https://github.com/odoo/odoo/commit/76cf201e1fc356ad00b27bcdec408c54949df33b
[3]: https://github.com/odoo/upgrade/pull/3980/commits/af5821d9aeb75d09653fc33f14e98fae5f5ba906

opw-5354523

closes odoo/odoo#238305

--- a/addons/website/static/src/snippets/s_dynamic_snippet/000.scss
+++ b/addons/website/static/src/snippets/s_dynamic_snippet/000.scss
@@ -1,6 +1,19 @@
 .s_dynamic {
-    &.o_dynamic_snippet_empty:not(.o_check_scroll_position) {
-        display: none !important;
+    #wrap &:not(.o_check_scroll_position) {
+        // Compatibility code: The `o_dynamic_empty` class was originally used to control
+        // the visibility of dynamic snippets. It was later renamed (starting from 18.0)
+        // to `s_dynamic_empty`, while another class `o_dynamic_snippet_empty` was added by
+        // the public widget before leaving edit mode (on destroy). As a result, a dynamic
+        // snippet may end up with:
+        // - `o_dynamic_empty` & `o_dynamic_snippet_empty` > for old but edited snippets.
+        // - `o_dynamic_empty` > for old snippets never updated in edit mode.
+        // - `s_dynamic_empty` and `o_dynamic_snippet_empty` > for new snippets.
+        &.o_dynamic_empty,
+        &.o_dynamic_snippet_empty {
+            body:not(.editor_enable) & {
+                display: none !important;
+            }
+        }
     }
     [data-url] {
         cursor: pointer;
